src/assets/main.css
@import './base.css';

* {
  transition: all 0.5s cubic-bezier(0.165, 0.84, 0.44, 1);
}

nav p {
  font-family: 'Outfit';
}

.blurry {
  filter: blur(100px);
}

.circle {
  @apply w-1/3 h-1/2 rounded-full absolute;
}

.section-one {
  @apply text-right;
}

.section-one .divider {
  @apply justify-end;
}

section {
  @apply p-6 sm:p-8 lg:p-12 xl:w-[90vw] xl:max-w-[1500px] relative;
}

section {
  @apply flex flex-col gap-4 lg:gap-6;
}

section .divider {
  @apply w-full flex flex-col gap-4 lg:gap-6;
}

.hero .divider h1 {
  font-family: 'Outfit';
  @apply font-bold text-4xl sm:text-5xl lg:text-6xl xl:text-7xl w-[85%] lg:w-[70%] mb-4;
}

.section-one .divider h2 {
  font-family: 'Outfit';
  @apply font-bold text-3xl sm:text-4xl lg:text-5xl xl:text-6xl max-w-[75%] lg:max-w-[55%] self-end text-right w-full;
}

.section-one .divider p {
  @apply self-end max-w-[75%] lg:max-w-[70%];
}

@media screen and (min-width: 448px) and (max-width: 640px) {
  .hero .divider .shape {
    @apply translate-x-8;
  }
}

@media only screen and (min-width: 530px) and (max-width: 639px) {
  .skill-icons {
    @apply grid-cols-6 !important;
  }
  .projects-grid {
    @apply grid-cols-2 !important;
  }
  .review-container {
    @apply grid-cols-2 !important;
  }
}

@media screen and (max-width: 370px) {
  .shape {
    display: none;
  }
  .section-one .divider p {
    @apply self-end max-w-full;
  }
  section .divider h1 {
    @apply w-full max-w-full;
  }
  .section-one .divider {
    padding-left: 0 !important;
  }
  .skill-icons {
    @apply grid-cols-3 !important;
  }
}

* {
  @apply bg-blend-exclusion;
}

.shape {
  transform-origin: center;
  @apply absolute -rotate-[15deg] w-32 sm:w-44 top-0;
}

.shape:hover {
  @apply scale-105;
}

.button-container {
  @apply flex gap-4 lg:gap-6 flex-col sm:flex-row;
}

.hero {
  @apply mb-4;
}

.hero .divider .shape {
  @apply w-32 sm:w-44 sm:-translate-x-[40%];
  left: calc(100% - 9.5rem);
}

@media screen and (min-width: 970px) and (max-width: 1023px) {
  .hero .divider .shape {
    @apply rotate-12;
  }
}

@media screen and (min-width: 749px) and (max-width: 820px) {
  .hero .divider .shape {
    @apply -translate-x-[20%];
  }
}

@media screen and (min-width: 500px) and (max-width: 550px) {
  .hero .divider .shape {
    left: calc(100% - 11rem);
  }
}

@media screen and (min-width: 405px) and (max-width: 446px) {
  .hero .divider .shape {
    left: calc(100% - 7rem);
  }
}

.section-one .shape {
  @apply -translate-y-2 sm:-translate-y-10 lg:translate-y-10 left-[1rem] sm:left-[3rem];
}

.section-one .shape.second {
  @apply -translate-y-20 left-[40%];
}

.hero .shape.second {
  @apply translate-y-10 left-[60%] xl:left-[65%];
}

@media screen and (min-width: 1136px) and (max-width: 1195px) {
  .hero .shape.second {
    @apply translate-y-20 -translate-x-36;
  }
}

@media screen and (min-width: 1196px) and (max-width: 1279px) {
  .hero .shape.second {
    @apply translate-x-0;
  }
  .hero .divider h1 {
    font-family: 'Outfit';
    @apply w-[65%];
  }
}

.section-one .divider {
  text-align: right;
}

.skill-icons {
  @apply bg-white bg-opacity-10 rounded-xl backdrop-blur-lg p-4 grid grid-cols-4 sm:grid-cols-6 md:grid-cols-8 lg:grid-cols-10 xl:grid-cols-12 shadow-2xl gap-4 lg:gap-6;
}

.skill-icons img {
  @apply min-w-8 w-full max-w-20 xl:max-w-24;
}

.skill-icons img:hover {
  transform: scale(1.1);
}

.skill-icons img:active {
  transform: scale(0.95);
}

.projects-grid {
  @apply grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 gap-4 lg:gap-6;
}

.reviews {
  text-align: center;
}

.review-container {
  text-align: center;
  @apply grid grid-cols-1 sm:grid-cols-2 xl:grid-cols-3 gap-4 lg:gap-6;
}

.review-container div {
  @apply hover:scale-95 shadow-2xl hover:shadow-sm;
}

.reviews h3 {
  font-family: 'Outfit';
  @apply font-bold text-3xl xl:text-4xl col-span-3 col-start-2;
}

.call-to-action h2 {
  @apply max-w-96 relative;
}

.call-to-action .inner {
  @apply absolute opacity-50 top-0 left-0 w-full h-full bg-gradient-to-r to-primary from-secondary rounded-xl blur-3xl -z-10;
}

.center {
  @apply w-full flex justify-center;
}

section > h2,
.contact-card p {
  font-family: 'Outfit';
  letter-spacing: 2px;
  @apply uppercase font-bold text-lg xl:text-xl;
}

.contact-card {
  @apply flex flex-col justify-center items-center gap-4 lg:gap-6 p-4 rounded-xl grow;
  @apply bg-gradient-to-r to-primary from-secondary shadow-inner;
  text-align: center;
}

.contact-card h2 {
  font-family: 'Outfit';
  @apply text-3xl font-bold;
}

.contact-card p {
  color: black;
}

